[tool.poetry]
name = "rencharmer"
version = "0.3.1"
description = "A utility script to work with python blocks inside Ren'Py scripts."
license = "MIT"
authors = ["GimmiRuski <gimmiruski+pypi@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/GimmiRuski/rencharmer"
repository = "https://github.com/GimmiRuski/rencharmer"

[tool.poetry.dependencies]
python = "^3.6"
black = "^20.8b1"
click = "^7.1.2"
isort = "^5.8.0"
pylint = "^2.8.2"
rich = "^9.13.0"
sh = "^1.14.1"

[tool.poetry.scripts]
rencharmer = 'rencharmer.rencharmer:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
